fixed misaligned processing component

--- a/client/src/mirror/Processing.css
+++ b/client/src/mirror/Processing.css
@@ -1,7 +1,7 @@
 .processing{
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgb(0, 0, 0, 0.6);
     color: white;
